--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx babel src --out-dir build",
-    "start": "npm run build && node ./build/index.js",
-    "start-dev": "nodemon --exec npx babel-node ./src/index.js",
+    "start": "cross-env NODE_ENV=production npm run build && node ./build/index.js",
+    "start-dev": "cross-env NODE_ENV=development nodemon --exec npx babel-node ./src/index.js",
     "create:tables": "npm run build && node ./build/migrate.js"
   },
   "author": "ikechukwu",
