--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.6",
-    "@babel/preset-env": "^7.12.1"
+    "@babel/preset-env": "^7.12.1",
+    "cross-env": "^7.0.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
